# cppstd20-code

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeReleasePresets.json  README.md  TODO.txt
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: CPM.cmake  Windows.Clang.toolchain.cmake  Windows.MSVC.toolchain.cmake  options.cmake
comptime/: CMakeLists.txt  asstring.hpp  comptimestring.cpp  consteval1.cpp  consteval2.cpp  consteval2.hpp  constinit.cpp  fiasco.cpp  isconsteval.cpp  isconsteval.hpp  mergevalues.cpp  mergevalues.hpp  mergevaluessz.cpp  mergevaluessz.hpp  returnvector.cpp  truth.cpp  truth.hpp  truthc.hpp  vector.cpp  vector.hpp
coro/: CMakeLists.txt  awaiter.cpp  awaiter.hpp  backawaiter.hpp  coreturn.cpp  coro.cpp  coro.hpp  coro2.cpp  coroasync.hpp  coroasync1.cpp  coroasync2.cpp  coroasyncdebug.cpp  corocoro.cpp  corocorosub.cpp  corogen.hpp  corogenback.hpp  coromem.cpp  coromempmr.cpp  coropool.hpp  coroprio.cpp  coroprio.hpp  coroprio2.cpp  coroprio2.hpp  coropriosched.hpp  coropriosched2.hpp  cororange.cpp  cororange.hpp  cororef.cpp  cororef.hpp  corotask.hpp  corotaskpmr.hpp  corotaskpromise.hpp  corotasksub.hpp  corotrace.cpp  corotraits.cpp  coyield.cpp  coyield.hpp  coyieldback.cpp  coyieldback.hpp  generator.hpp  (+4 more)
format/: CMakeLists.txt  always40.cpp  always40.hpp  always41.cpp  always41.hpp  always42.cpp  always42.hpp  always42inherit.cpp  color.cpp  color.hpp  formatalways40.hpp  formatalways41.hpp  formatalways42.hpp  formatalways42inherit.hpp  formatalways42ok.hpp  formatbool.cpp  formatgerman.cpp  formatperf.cpp
lang/: CMakeLists.txt  add.cpp  capturepack.cpp  conceptnttp.cpp  coord.cpp  coord.hpp  designated.cpp  explicitwrapper.cpp  lambdaconsteval.cpp  lambdahash.cpp  maxvalue.cpp  nttpdouble.cpp  nttpdouble2.cpp  nttplambda.cpp  nttpstring.cpp  nttpstruct.cpp  nttpstruct2.cpp  spacecompat.cpp  tmplauto.cpp  valorcoll.cpp  valorcoll.hpp  value20.hpp  value20def.hpp  valueold.hpp  wrapper.hpp
lib/: CMakeLists.txt  atomicref.cpp  atomicshared.cpp  atomicticket.cpp  atomicwait.cpp  atomicweak.cpp  barrier.cpp  barrierstop.cpp  begin.cpp  bitops16.cpp  bitops8.cpp  chrono1.cpp  chrono2.cpp  chrono3.cpp  chrono4.cpp  chronoattr.cpp  chronoclocks.cpp  chronoconv.cpp  chronocst.cpp  chronoparse.cpp  chronoparse.hpp  chronotz.cpp  concstream.cpp  latch.cpp  latchready.cpp  lexicothreeway.cpp  minmax.cpp  offsetzone.cpp  offsetzone.hpp  semaphore.cpp  semaphorenotify.cpp  shift.cpp  sourceloc.cpp  spandyn.cpp  spanfix.cpp  spanprint.hpp  spanview.cpp  stop.cpp  stopcv.cpp  swap.cpp  (+4 more)
modules/: CMakeLists.txt  mod0.cppm  mod0main.cpp  person1.cppm
modules/mod1/: mod1.cppm  mod1io.cpp  mod1price.cpp  testmod1.cpp
modules/mod2/: mod2.cppm  mod2price.cpp  testmod2.cpp
modules/mod3/: mod3.cppm  mod3customer.cppm  mod3io.cpp  mod3order.cppm  mod3price.cpp  testmod3.cpp
ranges/: CMakeLists.txt  commonview.cpp  dropcache.cpp  dropview.cpp  dropwhilecache.cpp  dropwhileview.cpp  elementsview.cpp  elementsviewhack.cpp  elementsviewhack.hpp  emptyview.cpp  filtercache.cpp  filterview.cpp  filttrans.cpp  filttrans2.cpp  iotaview.cpp  istreamview.cpp  joinconst.cpp  joinview.cpp  keysvaluesview.cpp  maxvalue1.hpp  maxvalue2.cpp  maxvalue2.hpp  owningview.cpp  printcoll.hpp  printconst.cpp  printranges.cpp  rangesproj.cpp  rangessort.cpp  refview.cpp  results.cpp  reversecache.cpp  reverseview.cpp  sentinel1.cpp  sentinel2.cpp  sentinel3.cpp  singleview.cpp  splitview.cpp  subrange.cpp  subrangecounted.cpp  takeview.cpp  (+8 more)
